increased card visibility time and added css class to prevent triple card clicks

--- a/css/app.css
+++ b/css/app.css
@@ -33,6 +33,10 @@ h1 {
     font-weight: 300;
 }
 
+.dpe {
+    pointer-events: none;
+}
+
 /*
  * Styles for the deck of cards
  */
